--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                         </div>
                                         </section>
 <section class="featured" id="featured">
-    <div class="heading"> <span>Featured Books</span></div>
+    <div class="heading"> <span>Feature Books</span></div>
     <div class="swiper featured-slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide box" id="1">
